[Refactor] Remaining HPPC to java.util collections (#8730) (#8784)
This commit refactors the remaining usages of hppc collections to java.util
collections and completely removes the obsolete hppc dependency.

Signed-off-by: Nicholas Walter Knize <nknize@apache.org>