@@ -31,7 +31,6 @@
 
 package org.opensearch.cluster.coordination;
 
-import com.carrotsearch.hppc.LongObjectHashMap;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.lucene.util.FixedBitSet;
@@ -498,7 +497,7 @@ public class LinearizabilityChecker {
      */
     private static class Cache {
         private final Map<Object, Set<FixedBitSet>> largeMap = new HashMap<>();
-        private final LongObjectHashMap<Set<Object>> smallMap = new LongObjectHashMap<>();
+        private final Map<Long, Set<Object>> smallMap = new HashMap<>();
         private final Map<Object, Object> internalizeStateMap = new HashMap<>();
         private final Map<Set<Object>, Set<Object>> statePermutations = new HashMap<>();
 
@@ -517,12 +516,11 @@ public class LinearizabilityChecker {
         }
 
         private boolean addSmall(Object state, long bits) {
-            int index = smallMap.indexOf(bits);
-            Set<Object> states;
-            if (index < 0) {
-                states = Collections.singleton(state);
+            Set<Object> states = smallMap.get(bits);
+            if (states == null) {
+                states = Set.of(state);
             } else {
-                Set<Object> oldStates = smallMap.indexGet(index);
+                Set<Object> oldStates = states;
                 if (oldStates.contains(state)) return false;
                 states = new HashSet<>(oldStates.size() + 1);
                 states.addAll(oldStates);
@@ -532,12 +530,7 @@ public class LinearizabilityChecker {
             // Get a unique set object per state permutation. We assume that the number of permutations of states are small.
             // We thus avoid the overhead of the set data structure.
             states = statePermutations.computeIfAbsent(states, k -> k);
-
-            if (index < 0) {
-                smallMap.indexInsert(index, bits, states);
-            } else {
-                smallMap.indexReplace(index, states);
-            }
+            smallMap.put(bits, states);
 
             return true;
         }
